# bitbang

./: .gitignore  .travis.yml  AUTHORS.txt  CMakeCache.txt  CMakeLists.txt  Project.cbp  README.md  RELEASE.md  cmake_install.cmake
1bitbang/include/src/bitbang/perceptions/: BBPerceptionFixedNumber.h
1bitbang/include/src/bitbangse/: CDefaultEventHandler.h
docker/: Dockerfile
include/Aircraft_Evacuation/src/: BoundingBox.h  BrainConfig.h  EvacWorld.h  GenericComponent.h  Obstacle.h
include/antworld/bitbang copy/include/: BBVisionReach2DCircle.h  BBWorld.h  BBWorldInterface.h  CTimedLabel.h
include/antworld/bitbang/include/: BBRuleListEditype.h
include/antworld/src/: AntAgent.h  AntWorld.h
include/antworld/src/Actions/: BBActionGoFront.h  BBActionReproduce.h
include/antworld/src/Schedules/: TakeScreenShotSchedule.h
include/antworldbitbang/include/features/: BBFeatureString.h
include/bitbang/include/antworld/src/: AntConfig.h  (+2 more)
include/bitbang/src/bitbang/: BBRandomRuleList.h
include/bitbang/src/bitbangse/: CPhysicsObject.h
include/bullet-test/bitbang/include/: BBOS.h  BBRule.h
lib/Win32/: bitbangse.lib.REMOVED.git-id
src/: BitBangSE.sdf.REMOVED.git-id  BitBangSE.sln  BitBangSE.vcproj  BitBangSE.vcxproj  BitBangSE.vcxproj.filters  BitBang_Prefix.pch  CMakeLists.txt  SConstruct  bitbang.i  bitbanglib.sdf.REMOVED.git-id  bitbanglib.sln  bitbanglib.vcproj  bitbanglib.vcxproj  bitbanglib.vcxproj.filters
src/BitBang.xcodeproj/: project.pbxproj  tbaptista.mode1  tbaptista.mode1v3  tbaptista.pbxuser
src/BitBang.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/BitBang.xcodeproj/project.xcworkspace/xcshareddata/: BitBang.xccheckout  BitBang.xcscmblueprint
src/BitBangSE.xcodeproj/: project.pbxproj  tbaptista.mode1v3  tbaptista.pbxuser
src/BitBangSE.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/BitBangSE.xcodeproj/project.xcworkspace/xcshareddata/: BitBangSE.xccheckout
src/bitbang/: BBAction.cpp  BBAction.h  BBBrain.cpp  BBCSVFileLog.cpp  BBCustomBrainBuilder.cpp  BBCustomBrainBuilder.h  BBFeature.cpp  BBFileLog.cpp  BBInfluence.cpp  BBInfluenceMap.cpp  BBLog.cpp  BBNeuralNetwork.cpp  BBNeuralNetwork.h  BBOSLinux.cpp  BBOSMacOSX.cpp  BBOSWin32.cpp  BBObject.cpp  BBObject.h  BBPerception.cpp  BBPerceptionSphere.cpp  BBPoint.h  BBRandomGenerator.cpp  BBRandomGenerator.h  BBRandomRuleList.cpp  BBRule.cpp  BBRuleCondition.cpp  BBRuleCondition.h  BBRuleList.cpp  BBRuleList.h  BBRuleListEditor.cpp  BBRuleListEditype.cpp  BBSchedule.cpp  BBTimer.cpp  BBVisionReach2DCircle.cpp  BBVisionReach3DCone.cpp  BBWorld.cpp  BBWorld.h  BitBang.cpp  CMakeLists.txt  SConscript
src/bitbang/GridLayer/: GridLattice.cpp  GridLattice.h  GridMapLayer.h  GridMapLayerInterface.h
src/bitbang/GridLayer/GenericLattice/: FloatLattice.h
src/bitbang/GridLayer/InfluenceMap/: DynamicInfluenceMap.cpp  DynamicInfluenceMap.h  Influence.cpp  Influence.h
src/bitbang/features/: BBFeatureBoolean.cpp  BBFeatureNumber.cpp  BBFeatureString.cpp
src/bitbang/perceptions/: BBPerceiveLocation.cpp  BBPerceiveLocation.h  BBPerceptionBoolean.cpp  BBPerceptionFeatureBoolean.cpp  BBPerceptionFeatureNumber.cpp  BBPerceptionFeatureString.cpp  BBPerceptionFeatureString.h  BBPerceptionFixedNumber.cpp  BBPerceptionFixedString.cpp  BBPerceptionNumber.cpp  BBPerceptionRandom.cpp  BBPerceptionRandomNumber.cpp  BBPerceptionRandomProbability.cpp  BBPerceptionReachResource.cpp  BBPerceptionSeeResource.cpp  BBPerceptionString.cpp  BBPerceptionTimer.cpp
src/bitbang/schedules/: BBLogSchedule.cpp  BBScheduleScriptable.cpp
src/bitbangse/: CDefaultEventHandler.cpp  CDefaultEventHandler.h  CEventHandler.cpp  CEventHandler.h  CEventReceiver.cpp  CEventReceiver.h  CFileConfig.cpp  CIrrMotionState.cpp  CIrrMotionState.h  CMakeLists.txt  CObjectLabel.cpp  CPhysicsObject.cpp  CPhysicsObject.h  CSimObject.cpp  CSimObject.h  CTimedLabel.cpp  CWorld.cpp  CWorld.h  DebugDraw.cpp  DebugDraw.h
src/bitbangse/CGridLayer/: CGridLattice.cpp  CGridLattice.h  CGridMapLayer.h
src/bitbangse/CGridLayer/GenericLattice/: FloatLattice.cpp  FloatLattice.h
src/bitbangse/util/: CUtilities.cpp  CUtilities.h
src/irrlicht/lib/Linux/: libIrrlicht.a.REMOVED.git-id
src/irrlicht/lib/Linux64/: libIrrlicht.a.REMOVED.git-id
src/irrlicht/lib/MacOSX/: libIrrlicht.a.REMOVED.git-id  libIrrlichtd.a.REMOVED.git-id
(+108 files in other folders)
